src/styles/styles.css
/* ... */
.all-p1-place-ships,
.all-p2-place-ships {
  /* Key Item: SVG ship height */
  height: var(--height-svg-ship);
  transition: transform 0.5s ease;
}

.all-p1-place-ships:hover,
.all-p2-place-ships:hover {
  transform: scale(1.25);
}

.all-p1-place-ships:active,
.all-p2-place-ships:active {
  transform: scale(1.1);
}

#p1-place-ship-btn-container,
#p2-place-ship-btn-container {
  height: auto;
  width: fit-content;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  margin: 0;
}

#p1-place-ships,
#p2-place-ships,
#p1-deployment-zone,
#p2-deployment-zone {
  color: var(--line);
}

#p1-deployment-zone,
#p1-target-zone,
#p2-deployment-zone,
#p2-target-zone {
  height: fit-content;
  width: fit-content;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  border-radius: 0.5rem;
  font-family: var(--font-fancy);
  font-size: 1rem;
  line-height: 1.5;
  overflow: visible;
  text-transform: uppercase;
}

#p1-deployment-zone,
#p2-deployment-zone {
  display: flex;
  border: 0.25rem solid var(--line);
  margin-bottom: 0.5rem;
}

#p1-target-zone,
#p2-target-zone {
  display: none;
  border: 0.25rem solid var(--enemy);
  color: var(--enemy);
  margin-top: 0.5rem;
}

#p1-ship-board,
#p2-ship-board,
#p1-hit-miss-board,
#p2-hit-miss-board,
#p1-target-ship-board,
#p2-target-ship-board,
#p1-target-hit-miss-board,
#p2-target-hit-miss-board {
  height: var(--height-width-grid);
  width: var(--height-width-grid);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  overflow: visible;
}

#p1-ship-board,
#p2-ship-board {
  background-color: var(--sea);
}

#p1-target-ship-board,
#p2-target-ship-board {
  background-color: var(--sea);
}

#p1-hit-miss-board,
#p2-hit-miss-board,
#p1-target-hit-miss-board,
#p2-target-hit-miss-board {
  height: var(--height-width-grid);
  width: var(--height-width-grid);
  font-family: var(--font-emoji);
  /* Key Item: Below negative margin-top is the key to getting the proper grid overlap */
  margin-top: var(--width-margin-offset);
}

.ship-cells1,
.ship-cells2,
.ship-target-cells1,
.ship-target-cells2,
.hit-miss-cells1,
.hit-miss-cells2,
.hit-miss-target-cells1,
.hit-miss-target-cells2 {
  /* Key Item: Grid cell size */
  height: var(--height-width-grid-cell);
  width: var(--height-width-grid-cell);
  display: flex;
  align-items: center;
  justify-content: center;
  font-family: var(--font-emoji);
  /* Key Item: Grid cell font-size */
  font-size: 100%;
  text-align: center;
}

.ship-cells1,
.ship-cells2 {
  border: 0.0785rem dashed var(--line);
}

.ship-target-cells1,
.ship-target-cells2 {
  border: 0.0785rem dashed var(--enemy);
}

.hit-miss-cells1,
.hit-miss-cells2,
.hit-miss-target-cells1,
.hit-miss-target-cells2 {
  transition: transform 1s ease;
  /* TESTING - APPLE BROWSERS ARE NOT SHOWING EMOJIS CONSISTENTLY, BELOW IS AN ATTEMPT TO REMEDY (AMONG OTHER SOLUTIONS TRIED ELSEWHERE) */
  visibility: visible !important;
  -webkit-transform: translate3d(0, 0, 0);
  z-index: 1;
}

.ship {
  /* Key Item: individual ship svg sizes */
  height: var(--height-svg-ship);
  opacity: 0.95;
}

/* SPECIAL HOVER EFFECTS (for deployment and target zones) */
.mouse-deploy:hover {
  background-color: var(--line);
  border: 0.125rem dashed var(--loser);
  opacity: 0.65;
  transform: scale(1.15);
  transform: scale(var(--scale-big));
}

.mouse-deploy:active {
  border-radius: 50%;
  transform: scale(1);
}

.mouse-target:hover {
  background-color: var(--enemy);
  border: 0.5rem solid var(--loser);
  border-radius: 50%;
  opacity: 0.6;
  transform: scale(1.75);
}

.mouse-target:active {
  border-radius: 50%;
  transform: scale(1);
}

/* MEDIA QUERIES */
@media only screen and (width >= 400px) {
  :root {
    --width-master: 25rem;
    --gif-variable: 3rem;
    --height-width-gif: calc(var(--width-master) - var(--gif-variable));
  }
}

@media only screen and (width >= 600px) {
  :root {
    --width-master: 26rem;
    --height-messages: 6.5rem;
  }

  html,
  body {
    font-size: 16px;
    line-height: 1.25;
  }

  #title-text-top,
  #title-text-bot {
    font-size: 2.65rem;
  }

  #MMM {
    font-size: 0.95rem;
  }

  .btn-a {
    height: 2.5rem;
    font-size: 1.25rem;
    gap: 0.25rem;
    margin: 0.5rem 0 0.5rem 0;
    padding: 0.125rem;
  }

  #btn-pvsc,
  #btn-pvsp {
    height: 3.25rem;
    font-size: 1.35rem;
    margin: 0.25rem;
  }

  #messages {
    height: var(--height-messages);
    align-items: start;
    margin-top: 0.6rem;
  }

  #message-bar {
    padding: 0.5rem 0.5rem 0.5rem 0.75rem;
  }

  #main-btn-container {
    gap: 0.5rem;
  }
}

@media only screen and (width >= 800px) {
  :root {
    --width-master: 27rem;
  }

  html,
  body {
    font-size: 18px;
    line-height: 1.25;
  }

  #title-text-top,
  #title-text-bot {
    font-size: 2.75rem;
  }

  #MMM {
    font-size: 0.975rem;
  }
}

